# sqlparser

./: .gitignore  .gitmodules  Dockerfile
sqlparser/: config.json  zephir.phar
sqlparser-rs/: Cargo.toml
sqlparser-rs/src/: lib.rs
sqlparser/optimizers/: Sql2jsonOptimizer.php
sqlparser/sqlparser/: sqlparser.zep
sqlparser/sqlparser-rs/: sqlparser.h
sqlparser/test/: sql2json.php
