[package]
name = "parsesqltools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sqlparser"
path = "src/lib.rs"
crate-type = ["staticlib"]


[features]
default = ["std", "serde_json", "serde"]
std = []


[dependencies]
bigdecimal = { version = "0.4.1", features = ["serde"], optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sqlparser_derive = { version = "0.1.1", optional = true }
simple_logger = "4.0"
sqlparser = { version = "0.39.0", features = ["serde_json", "serde"] }
libc = "*"
base64 = "0.12.1"